Add remaining notebooks to table of contents (Human in Loop, RAGS, AgenticRag)

--- a/_toc.yml
+++ b/_toc.yml
@@ -16,8 +16,10 @@ chapters:
     title: Chatbots with Multiple Tools
   - file: 1-langgraph Basics/7-ReActAgents
     title: ReAct Agents
+  
   - file: 2-langgraph advance/1-streaming
     title: Streaming
+  
   - file: 4- Workflows/1-prompting_chaining
     title: Prompting and Chaining
   - file: 4- Workflows/2-parallelization
@@ -28,5 +30,17 @@ chapters:
     title: Orchestrator-Worker Pattern
   - file: 4- Workflows/5-Evaluator-optimizer
     title: Evaluator-Optimizer Pattern
+  
+  - file: 5-HumanintheLoop/1-Humanintheloop
+    title: Human in the Loop
+  
+  - file: 6-RAGS/1-AgenticRAG
+    title: Agentic RAG
+  
+  - file: 7-AgenticRag/1-agenticrag
+    title: Agentic RAG
+  - file: 7-AgenticRag/2-ReAct
+    title: ReAct Agent
+  
   - file: pydantic/intro
     title: Pydantic Introduction
