--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,10 @@ html:
   home_page_in_navbar: true
   baseurl: /
 
+# Disable notebook execution
+execute:
+  execute_notebooks: "off"
+
 # Jupyter Book settings
 sphinx:
   config:
